--- a/index.html
+++ b/index.html
@@ -1,8 +1,37 @@
 <!DOCTYPE html>
-<html>
-   <head>
-   </head>
-   <body>
-      <!-- Write your HTML in this file! -->
-   </body>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
+    <title>About me Section</title>
+    
+</head>
+<body>
+   <div class ="container"
+   <h1> Cambria Hudson </h1>
+   <h2> Cyber Secuirty Analyst</h2>
+<div class ="images">
+   <img src ="./images/about me image.jpg" alt = "Photograph Of Me">
+   <p>
+      Results-driven Cyber Security Analyst with a proven track record in scaling and securing networks at all 7 layers of the OSI model, mitigating security breaches, and analyzing business needs. Experienced in implementing robust cyber security strategies and deploying cutting-edge technical solutions to safeguard digital assets. Adept in leading end-to-end IT program management, including requirement gathering and analysis, resource management, risk mitigation, and stakeholder governance.
+   </p>
+   <div class ="images">
+      <img src ="./images/nephoto.jpg" alt = "Photograph of tech">
+   <p>
+      Spearheaded real-world cyber attacks simulations resulting in uncovering critical vulnerabilities, resulting in a 75% improvement in the overall network security of assigned client projects
+   </p>
+   <div class ="images">
+      <img src ="./images/thumbnp.jpg" alt = "Photograph Of Me">
+   <p>
+      Develop and deploy responsive web applications using HTML, CSS, and JavaScript, resulting in a 20% increase in user engagement
+and a 15% decrease in bounce rate
+   </p>
+
+</div>
+</body>
+
 </html>
+
+   
+  
