--- a/index.html
+++ b/index.html
@@ -5,17 +5,44 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <title>About me Section</title>
-    
-</head>
+    </head>
+
 <body>
-   <div class ="container"
+   <article>
+
+   
+<header>
+   <div>
+
+   </div>
    <h1> Cambria Hudson </h1>
-   <h2> Cyber Secuirty Analyst</h2>
-<div class ="images">
+   <h2 id="JobRole" > Cyber Security Analyst</h2>
+    </header>
+    <main>
+      
+  
+   
+
+<div>
+
+
+</d2iv>
+   
+<div class = "images">
+   
+  
+
+   
+   </div>
+
+
    <img src ="./images/about me image.jpg" alt = "Photograph Of Me">
+
    <p>
       Results-driven Cyber Security Analyst with a proven track record in scaling and securing networks at all 7 layers of the OSI model, mitigating security breaches, and analyzing business needs. Experienced in implementing robust cyber security strategies and deploying cutting-edge technical solutions to safeguard digital assets. Adept in leading end-to-end IT program management, including requirement gathering and analysis, resource management, risk mitigation, and stakeholder governance.
    </p>
+   </div>
+
    <div class ="images">
       <img src ="./images/nephoto.jpg" alt = "Photograph of tech">
    <p>
@@ -27,11 +54,16 @@
       Develop and deploy responsive web applications using HTML, CSS, and JavaScript, resulting in a 20% increase in user engagement
 and a 15% decrease in bounce rate
    </p>
-
+</article>
 </div>
 </body>
+</main>
 
-</html>
 
+<footer>
+   <p>&copy;Cambria Hudson</p>
+   </footer>
+   
+   
    
   
